# database-management-web

./: .dockerignore  .gitignore  Dockerfile  ETL_proces.ipynb  Main_Page.py  Readme.md  docker-compose.yml  etl_proces.py  finetune.py  init.sql  processing.ipynb  pyproject.toml  requirements.txt  schema.rb  style.css  test.py
.streamlit/: config.toml  secret_example.toml  secrettemplate.toml
configs/: data_configs.yml  tools_configs.yml
core/: __init__.py  database.py  firebase_config.py
core/configs/: tools_configs.yml
core/helper/: load_config.py  load_data_configs.py
core/models/: models.py
core/services/: AssetDataService.py  CloudSessionStorage.py  DatabaseSessionService.py  EmailService.py  EnhancedCookiesSession.py  PersistentSessionService.py  RAG.py  SecureSessionManager.py  SessionStorageService.py  UserDataService.py  UserService.py  dynamic_search_helper.py  etl_proces.py
core/services/agent_graph/: agent_backend.py  build_graph.py  debug_logger.py  debug_ui.py  load_config.py  tool_airflow_trigger.py  tool_enhanced_web_research.py  tool_intent_analysis.py  tool_rag.py  tool_sql_agent.py  tool_tavily_search.py  tool_visualization.py  tools_web_search.py
core/services/agent_graph/prompts/: __init__.py  agent_prompts.py  behavioral_rules.py  domain_context.py  guidance_prompts.py  prompt_config.py  prompt_manager.py  system_prompts.py  tool_config.py  validate_prompts.py
core/services/agent_graph/tools/: tool_airflow_trigger.py  tool_rag.py  tool_sql_agent.py  tool_sql_agent_optimized.py  tool_visualization.py  tools_web_search.py
core/utils/: cloud_config.py  cloud_session_storage.py  cookies.py  database.py  firebase_config.py  load_config.py  persistence_monitor.py  persistent_session.py  session_debug.py  session_manager.py  session_restoration.py  streamlit_cloud_cookies.py  url_session_manager.py
features/admin/: controller.py
features/admin/views/: dashboard.py  rag.py  rag2.py  verify_users.py
features/home/: controller.py
features/home/views/: Dashboard2.py  add_column.py  chatbot.py  chatbot2.py  dashboard.py  search.py  update.py  update_data.py
models/: UserService.py  __init__.py  attendance.py  attendance_service.py  email_service.py  models.py  user.py  user_model.py  user_service.py
page_logic/: admin_page_logic.py  home_page_logic.py
pages/: 1  Dashboard.py  1  Home Page.py  1 Home Page.py  2 Admin Page.py  2 admin.py  3 💰 Kurir.py
static/: load_css.py
static/css/: style.css
sub_pages/: chatbot.py  dashboard.py  search.py  update.py  update_data.py
sub_pages/admin/: rag.py  verify_users.py
sub_pages/home/: chatbot.py  chatbot2.py  dashboard.py  search.py  update.py  update_data.py
utils/: __init__.py  account.py  cookies.py  database.py  firebase_config.py
