[project]
name = "intern-iconnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1 ; python_full_version == '3.11.9'",
    "aiohttp==3.11.18 ; python_full_version == '3.11.9'",
    "aiosignal==1.3.2 ; python_full_version == '3.11.9'",
    "altair==5.5.0 ; python_full_version == '3.11.9'",
    "annotated-types==0.7.0 ; python_full_version == '3.11.9'",
    "anyio==4.9.0 ; python_full_version == '3.11.9'",
    "asttokens==3.0.0 ; python_full_version == '3.11.9'",
    "attrs==25.3.0 ; python_full_version == '3.11.9'",
    "blinker==1.9.0 ; python_full_version == '3.11.9'",
    "branca==0.8.1 ; python_full_version == '3.11.9'",
    "cachecontrol==0.14.3 ; python_full_version == '3.11.9'",
    "cachetools==5.5.2 ; python_full_version == '3.11.9'",
    "certifi==2025.4.26 ; python_full_version == '3.11.9'",
    "cffi==1.17.1 ; python_full_version == '3.11.9'",
    "charset-normalizer==3.4.2 ; python_full_version == '3.11.9'",
    "click==8.2.1 ; python_full_version == '3.11.9'",
    "colorama==0.4.6 ; python_full_version == '3.11.9' and sys_platform == 'win32'",
    "cryptography==45.0.2 ; python_full_version == '3.11.9'",
    "dataclasses-json==0.6.7 ; python_full_version == '3.11.9'",
    "decorator==5.2.1 ; python_full_version == '3.11.9'",
    "deprecation==2.1.0 ; python_full_version == '3.11.9'",
    "executing==2.2.0 ; python_full_version == '3.11.9'",
    "filetype==1.2.0 ; python_full_version == '3.11.9'",
    "firebase-admin==6.6.0 ; python_full_version == '3.11.9'",
    "folium==0.14.0 ; python_full_version == '3.11.9'",
    "frozenlist==1.6.0 ; python_full_version == '3.11.9'",
    "geopandas==1.0.1 ; python_full_version == '3.11.9'",
    "gitdb==4.0.12 ; python_full_version == '3.11.9'",
    "gitpython==3.1.44 ; python_full_version == '3.11.9'",
    "google-ai-generativelanguage>=0.6.18",
    "google-ai-generativelanguage==0.6.18 ; python_full_version == '3.11.9'",
    "google-api-core==2.24.2 ; python_full_version == '3.11.9'",
    "google-api-python-client==2.169.0 ; python_full_version == '3.11.9'",
    "google-auth==2.40.1 ; python_full_version == '3.11.9'",
    "google-auth-httplib2==0.2.0 ; python_full_version == '3.11.9'",
    "google-auth-oauthlib==1.2.2 ; python_full_version == '3.11.9'",
    "google-cloud-core==2.4.3 ; python_full_version == '3.11.9'",
    "google-cloud-firestore==2.20.2 ; python_full_version == '3.11.9' and platform_python_implementation != 'PyPy'",
    "google-cloud-storage==3.1.0 ; python_full_version == '3.11.9'",
    "google-crc32c==1.7.1 ; python_full_version == '3.11.9'",
    "google-genai>=1.19.0",
    "google-resumable-media==2.7.2 ; python_full_version == '3.11.9'",
    "googleapis-common-protos==1.70.0 ; python_full_version == '3.11.9'",
    "gotrue==2.12.0 ; python_full_version == '3.11.9'",
    "greenlet==3.2.2 ; (python_full_version == '3.11.9' and platform_machine == 'AMD64') or (python_full_version == '3.11.9' and platform_machine == 'WIN32') or (python_full_version == '3.11.9' and platform_machine == 'aarch64') or (python_full_version == '3.11.9' and platform_machine == 'amd64') or (python_full_version == '3.11.9' and platform_machine == 'ppc64le') or (python_full_version == '3.11.9' and platform_machine == 'win32') or (python_full_version == '3.11.9' and platform_machine == 'x86_64')",
    "grpcio==1.71.0 ; python_full_version == '3.11.9'",
    "grpcio-status==1.71.0 ; python_full_version == '3.11.9'",
    "gspread==6.2.0 ; python_full_version == '3.11.9'",
    "h11==0.16.0 ; python_full_version == '3.11.9'",
    "h2==4.2.0 ; python_full_version == '3.11.9'",
    "hpack==4.1.0 ; python_full_version == '3.11.9'",
    "httpcore==1.0.9 ; python_full_version == '3.11.9'",
    "httplib2==0.22.0 ; python_full_version == '3.11.9'",
    "httpx==0.28.1 ; python_full_version == '3.11.9'",
    "httpx-sse==0.4.0 ; python_full_version == '3.11.9'",
    "hyperframe==6.1.0 ; python_full_version == '3.11.9'",
    "idna==3.10 ; python_full_version == '3.11.9'",
    "iniconfig==2.1.0 ; python_full_version == '3.11.9'",
    "ipython==9.0.1 ; python_full_version == '3.11.9'",
    "ipython-pygments-lexers==1.1.1 ; python_full_version == '3.11.9'",
    "jedi==0.19.2 ; python_full_version == '3.11.9'",
    "jinja2==3.1.6 ; python_full_version == '3.11.9'",
    "jsonpatch==1.33 ; python_full_version == '3.11.9'",
    "jsonpointer==3.0.0 ; python_full_version == '3.11.9'",
    "jsonschema==4.23.0 ; python_full_version == '3.11.9'",
    "jsonschema-specifications==2025.4.1 ; python_full_version == '3.11.9'",
    "langchain==0.3.21 ; python_full_version == '3.11.9'",
    "langchain-community==0.3.20 ; python_full_version == '3.11.9'",
    "langchain-core==0.3.60 ; python_full_version == '3.11.9'",
    "langchain-google-genai==2.1.4 ; python_full_version == '3.11.9'",
    "langchain-ollama>=0.3.3",
    "langchain-text-splitters==0.3.8 ; python_full_version == '3.11.9'",
    "langgraph==0.3.34 ; python_full_version == '3.11.9'",
    "langgraph-checkpoint==2.0.26 ; python_full_version == '3.11.9'",
    "langgraph-prebuilt==0.1.8 ; python_full_version == '3.11.9'",
    "langgraph-sdk==0.1.69 ; python_full_version == '3.11.9'",
    "langsmith==0.3.42 ; python_full_version == '3.11.9'",
    "markdown-it-py==3.0.0 ; python_full_version == '3.11.9'",
    "markupsafe==3.0.2 ; python_full_version == '3.11.9'",
    "marshmallow==3.26.1 ; python_full_version == '3.11.9'",
    "matplotlib-inline==0.1.7 ; python_full_version == '3.11.9'",
    "mdurl==0.1.2 ; python_full_version == '3.11.9'",
    "msgpack==1.1.0 ; python_full_version == '3.11.9'",
    "multidict==6.4.4 ; python_full_version == '3.11.9'",
    "mypy-extensions==1.1.0 ; python_full_version == '3.11.9'",
    "narwhals==1.40.0 ; python_full_version == '3.11.9'",
    "numpy==2.2.6 ; python_full_version == '3.11.9'",
    "oauth2client==4.1.3 ; python_full_version == '3.11.9'",
    "oauthlib==3.2.2 ; python_full_version == '3.11.9'",
    "ollama>=0.5.1",
    "orjson==3.10.18 ; python_full_version == '3.11.9'",
    "ormsgpack==1.9.1 ; python_full_version == '3.11.9'",
    "packaging==24.2 ; python_full_version == '3.11.9'",
    "pandas==2.2.3 ; python_full_version == '3.11.9'",
    "parso==0.8.4 ; python_full_version == '3.11.9'",
    "pexpect==4.9.0 ; python_full_version == '3.11.9' and sys_platform != 'emscripten' and sys_platform != 'win32'",
    "pillow==11.2.1 ; python_full_version == '3.11.9'",
    "plotly==5.14.1 ; python_full_version == '3.11.9'",
    "pluggy==1.6.0 ; python_full_version == '3.11.9'",
    "postgrest==1.0.1 ; python_full_version == '3.11.9'",
    "prompt-toolkit==3.0.51 ; python_full_version == '3.11.9'",
    "propcache==0.3.1 ; python_full_version == '3.11.9'",
    "proto-plus==1.26.1 ; python_full_version == '3.11.9'",
    "protobuf==5.29.4 ; python_full_version == '3.11.9'",
    "psycopg2-binary==2.9.10 ; python_full_version == '3.11.9'",
    "ptyprocess==0.7.0 ; python_full_version == '3.11.9' and sys_platform != 'emscripten' and sys_platform != 'win32'",
    "pure-eval==0.2.3 ; python_full_version == '3.11.9'",
    "pyarrow==20.0.0 ; python_full_version == '3.11.9'",
    "pyasn1==0.6.1 ; python_full_version == '3.11.9'",
    "pyasn1-modules==0.4.2 ; python_full_version == '3.11.9'",
    "pycparser==2.22 ; python_full_version == '3.11.9'",
    "pydantic==2.10.6 ; python_full_version == '3.11.9'",
    "pydantic-core==2.27.2 ; python_full_version == '3.11.9'",
    "pydantic-settings==2.9.1 ; python_full_version == '3.11.9'",
    "pydeck==0.9.1 ; python_full_version == '3.11.9'",
    "pygments==2.19.1 ; python_full_version == '3.11.9'",
    "pyjwt==2.10.1 ; python_full_version == '3.11.9'",
    "pyogrio==0.11.0 ; python_full_version == '3.11.9'",
    "pyparsing==3.2.3 ; python_full_version == '3.11.9'",
    "pypdf>=5.6.0",
    "pyproj==3.7.1 ; python_full_version == '3.11.9'",
    "pyprojroot==0.3.0 ; python_full_version == '3.11.9'",
    "pytest==8.3.5 ; python_full_version == '3.11.9'",
    "pytest-mock==3.14.0 ; python_full_version == '3.11.9'",
    "python-dateutil==2.9.0.post0 ; python_full_version == '3.11.9'",
    "python-dotenv==1.0.1 ; python_full_version == '3.11.9'",
    "pytz==2025.2 ; python_full_version == '3.11.9'",
    "pyyaml==6.0.2 ; python_full_version == '3.11.9'",
    "realtime==2.4.3 ; python_full_version == '3.11.9'",
    "referencing==0.36.2 ; python_full_version == '3.11.9'",
    "requests==2.32.3 ; python_full_version == '3.11.9'",
    "requests-oauthlib==2.0.0 ; python_full_version == '3.11.9'",
    "requests-toolbelt==1.0.0 ; python_full_version == '3.11.9'",
    "rich==13.9.4 ; python_full_version == '3.11.9'",
    "rpds-py==0.25.0 ; python_full_version == '3.11.9'",
    "rsa==4.9.1 ; python_full_version == '3.11.9'",
    "shapely==2.1.1 ; python_full_version == '3.11.9'",
    "six==1.17.0 ; python_full_version == '3.11.9'",
    "smmap==5.0.2 ; python_full_version == '3.11.9'",
    "sniffio==1.3.1 ; python_full_version == '3.11.9'",
    "sqlalchemy==1.4.54 ; python_full_version == '3.11.9'",
    "stack-data==0.6.3 ; python_full_version == '3.11.9'",
    "storage3==0.11.3 ; python_full_version == '3.11.9'",
    "streamlit==1.41.1 ; python_full_version == '3.11.9'",
    "streamlit-cookies-manager==0.2.0 ; python_full_version == '3.11.9'",
    "streamlit-folium==0.15.0 ; python_full_version == '3.11.9'",
    "streamlit-option-menu==0.3.2 ; python_full_version == '3.11.9'",
    "strenum==0.4.15 ; python_full_version == '3.11.9'",
    "supabase==2.15.0 ; python_full_version == '3.11.9'",
    "supafunc==0.9.4 ; python_full_version == '3.11.9'",
    "tenacity==9.1.2 ; python_full_version == '3.11.9'",
    "toml==0.10.2 ; python_full_version == '3.11.9'",
    "tornado==6.5 ; python_full_version == '3.11.9'",
    "traitlets==5.14.3 ; python_full_version == '3.11.9'",
    "typing-extensions==4.13.2 ; python_full_version == '3.11.9'",
    "typing-inspect==0.9.0 ; python_full_version == '3.11.9'",
    "typing-inspection==0.4.0 ; python_full_version == '3.11.9'",
    "tzdata==2025.2 ; python_full_version == '3.11.9'",
    "uritemplate==4.1.1 ; python_full_version == '3.11.9'",
    "urllib3==2.4.0 ; python_full_version == '3.11.9'",
    "watchdog==6.0.0 ; python_full_version == '3.11.9' and sys_platform != 'darwin'",
    "wcwidth==0.2.13 ; python_full_version == '3.11.9'",
    "websockets==14.2 ; python_full_version == '3.11.9'",
    "xxhash==3.5.0 ; python_full_version == '3.11.9'",
    "yarl==1.20.0 ; python_full_version == '3.11.9'",
    "zstandard==0.23.0 ; python_full_version == '3.11.9'",
]
